Wed Feb 19 21:34:01 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* fifo.c (argp_program_version, argp): New variables.
	(parse_opt): New function.
	(options): Use argp structures instead of getopt ones.
	(main): Use argp instead of getopt.
	<argp.h>: New include.
	<getopt.h>: Include removed.
	(trivfs_protid_port_class, trivfs_cntl_portclasses,
	trivfs_protid_nportclasses, trivfs_cntl_nportclasses):
	Variables removed.
	(main): Don't use them.
	Don't create our own port classes/bucket, let trivfs_startup do it.

Tue Feb 18 12:55:50 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* fifo.c <version.h>: New include.
	(parse_opt): Use KEY, not OPT.

Fri Feb 14 03:05:59 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (control_class, node_class, port_bucket,
	trivfs_protid_port_class, trivfs_cntl_portclasses,
	trivfs_protid_nportclasses, trivfs_cntl_nportclasses):
	Variables removed.
	(main): Don't use them.

Thu Feb 13 19:42:38 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* firmlink.c: New file.
	* Makefile (targets): Add firmlink.
	(SRCS): Add firmlink.c.
	(firmlink): New target.

Thu Sep 26 14:27:02 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (trivfs_S_file_check_access): Function removed (trivfs
	default is now sufficient).

Tue Sep 24 15:39:36 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (provide_zeros): Variable removed.
	(trivfs_S_io_read): Don't return zeros anymore.
	(trivfs_S_io_readable): Always return 0.
	(argp_program_version): New variable.
	(main): Use argp for argument parsing.
	(trivfs_S_file_check_access): New function.

Thu Sep 12 16:39:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.

Fri Jul 12 23:02:36 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* crash.c (stop_pgrp): Fetch pgrp using correct call.

Mon Jul  8 13:52:36 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* crash.c (stop_pgrp): Don't do anything if ORPHANED.
