@@ -1,6 +1,6 @@
 /* Show all hurd ids
 
-   Copyright (C) 1995, 1996 Free Software Foundation, Inc.
+   Copyright (C) 1995, 1996, 1997 Free Software Foundation, Inc.
 
    Written by Miles Bader <miles@gnu.ai.mit.edu>
 
@@ -31,7 +31,7 @@
 #include <error.h>
 #include <hurd/id.h>
 
-char *argp_program_version = STANDARD_HURD_VERSION (hurdids);
+const char *argp_program_version = STANDARD_HURD_VERSION (hurdids);
 
 static struct argp_option options[] =
 {
