@@ -1,5 +1,5 @@
 /* Call sync synchronously.
-   Copyright (C) 1994, 1995, 1996 Free Software Foundation, Inc.
+   Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
    Written by Michael I. Bushnell.
 
    This file is part of the GNU Hurd.
@@ -22,7 +22,7 @@
 #include <argp.h>
 #include <version.h>
 
-char *argp_program_version = STANDARD_HURD_VERSION (sync);
+const char *argp_program_version = STANDARD_HURD_VERSION (sync);
 
 int
 main (int argc, char *argv[])
