@@ -49,7 +49,7 @@ extern char *canon_host (char *host);
 extern char *shared_domain (char *host1, char *host2);
 extern char *localhost ();
 
-char *argp_program_version = STANDARD_HURD_VERSION (w);
+const char *argp_program_version = STANDARD_HURD_VERSION (w);
 
 #define OA OPTION_ARG_OPTIONAL
 
